--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <h3>A little about myself...</h3>
             </div>
 
-            <p class="about_txt">A university student with a passion for all things arts and craft. I enjoy making
-                things, learning new crafting methods and exploring new ideas. I hope to be able to share a bit of my
-                passion with you through every single custom resin piece I create.</p>
+            <p class="about_txt">A student with a passion for all things arts and crafts. Amidst my usual busy schedule, 
+                I enjoy making things, learning new crafting methods, and exploring new ideas in my free time. I hope to 
+                be able to share a bit of my passion with you through every single custom resin piece I create.</p>
 
             <img class="img_1" src="./images/group_1.png" alt="Resin keychain pieces" data-aos="fade-left">
 
@@ -63,8 +63,7 @@
                 <h3>@sugar_plus_resin</h3>
             </div>
             <p class="contact_txt">Find finished pieces being sold and past works on my <span>Instagram</span> or
-                <span>Carousell</span> page. For any enquires or special custom requests, send a DM to my instagram page
-                or email me at <span>sugar_plus_resin@gmail.com</span>
+                <span>Carousell</span> page. For any enquiries or special custom requests, please drop me a DM at my instagram page!</span>
             </p>
             <div class="contact_icons">
                 <a href="https://www.instagram.com/sugar_plus_resin/">
